# mtasa-modules

./: .gitignore  .gitmodules  .travis.yml  CFunctions.h  CSocket.h  CSocketManager.cpp  CSocketManager.h  Common.h  Makefile  Socket.cpp  Socket.h  SocketErrors.h  Sockets.h  appveyor.yml  create-projects.bat  ml_sockets.cpp  ml_sockets.h  ml_sockets.vcproj  modules-build-x32.sh  modules-build-x64.sh  modules-build.sh  premake5.lua
Texturizer/: README
Texturizer/TextureWriter/: AppMain.cpp  TextureData.hpp  TextureDictionary.hpp  TextureInfo.hpp  cstdint.h
Texturizer/Texturizer/: CFunctions.h  CMakeLists.txt  GdImgManager.cpp  ModuleFilePaths.cpp  ModuleFilePaths.h  TextureImage.cpp  ml_base.cpp
branches/ml_irc-rewrite/: Makefile  ml_irc.sln  ml_irc.vcproj
branches/sockets/: CFunctions.cpp
branches/sockets_rewrite/: CFunctions.cpp  CSocket.cpp  Makefile  SocketErrors.h  ml_sockets.sln
lib/: lua5.1d.lib
libs/x32/: lua5.1.lib  lua5.1_d.lib
libs/x64/: lua5.1.lib  lua5.1_d.lib
ml_curl/: CFunctions.cpp  CFunctions.h  Common.h  Makefile  Mtacurl.cpp  Mtacurl.h  Mtacurls.cpp  Mtacurls.h  UpgradeLog.XML  ml_curl.sln  ml_system.cpp  ml_system.h  ml_system.vcxproj  ml_system.vcxproj.filters
ml_curl/Debug/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  ml_curl.exp  ml_curl.lib  ml_curl_manifest.rc
ml_curl/lib/: libcurld.lib
ml_irc/: BUILD  CFunctions.cpp  CFunctions.h  CThread.cpp  CThread.h  CThreadData.cpp  CThreadData.h  Common.h  Makefile  ml_irc.cpp  ml_irc.h  ml_irc.sln  ml_irc.vcproj
ml_irc/extra/: CLuaArgument.cpp  CLuaArgument.h
ml_irc/include/: ILuaModuleManager.h  luaconf.h  lualib.h
ml_irc/src/: CFunctions.cpp  Common.h
ml_system/: ml_system.cpp  ml_system.h  ml_system.sln  ml_system.vcproj
modules/bcrypt/: CFunctions.cpp  CFunctions.h  Common.h  README.md  ml_base.cpp  ml_base.h  premake5.lua
modules/curl/: premake5.lua
modules/mysql/: LICENSE  premake5.lua
modules/sockets/: premake5.lua
modules/system/: premake5.lua
modules/texturizer/: CHANGELOG  README  premake5.lua
mta-mysql/: LICENSE  build.sh  configure  configure.ac  mta_mysql.sln  mta_mysql.vcproj
mta-mysql/include/: common.h  handler.h  luaconf.h  module.h  result.h
mta-mysql/luaimports/: Makefile.am  luaimports.cpp
mta-mysql/src/: Makefile.am  Makefile.in  handler.cpp  module.cpp  result.cpp
resources/irc/: TODO.txt  aMessages.html  acl.xml  help.htm  irc.lua  irc_echo.lua  irc_events.lua  logs.html  meta.xml  settings.xml
resources/sockets/: MTAIRC_s.lua  irc.lua  irctest.lua
sockets/: CFunctions.cpp  CFunctions.h  CSocket.cpp  CSocket.h  CSocketManager.cpp  CSocketManager.h  CSockets_Linux.h  CSockets_Win32.cpp  CSockets_Win32.h  Makefile  Socket.cpp  Socket.h  Sockets.cpp  build-32.sh  build-64.sh  build.sh  configure.ac  ml_base.cpp  ml_base.h  ml_base.vcproj  ml_sockets.cpp  ml_sockets.h  ml_sockets.sln  ml_sockets.vcproj  ml_sockets.vcxproj  ml_sockets.vcxproj.filters  sockets.cpp  sockets.h
sockets/Debug/: Sockets module MTA.exp  Sockets module MTA.lib
sockets/Module SDK/: CFunctions.cpp  CFunctions.h  CThread.h  UpgradeLog.XML  ml_base.h  ml_base.vcproj
sockets/Sockets module MTA/: Sockets module MTA.vcproj  sockets.h
sockets/extra/: CLuaArgument.h  CLuaArguments.cpp
sockets/include/: CSocket.h  CSocketManager.h  Common.h  ILuaModuleManager.h  ml_sockets.h
sockets/src/: CSocket.cpp  CSocketManager.cpp  Makefile.am  ml_sockets.cpp
trunk/Texturizer/: AppVersion.h  CHANGELOG  CMakeLists.txt
trunk/Texturizer/TextureWriter/: CMakeLists.txt  ChunkInfo.hpp  TextureData.cpp  TextureDictionary.cpp  TextureExtra.cpp  TextureExtra.hpp  TextureInfo.cpp  TextureWriter.h
trunk/Texturizer/Texturizer/: CFunctions.cpp  GdImgManager.h  TextureContainer.cpp  TextureContainer.h  TextureImage.h  ml_base.h
trunk/Texturizer/Texturizer/extra/: CLuaArgument.cpp
trunk/Texturizer/Texturizer/include/: ILuaModuleManager.h
trunk/Texturizer/Texturizer/lib/: lua5.1.lib  lua5.1d.lib
(+283 files in other folders)
